--- a/install
+++ b/install
@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
-cd $HOME/BASHAA
+cd $HOME/BASHA
 install() {
 rm -rf $HOME/.telegBTm-cli
 sudo apt-get update -y
@@ -19,8 +19,8 @@ sudo apt-get install libstdc++6 -y
 sudo apt-get install lua-lgi -y
 sudo apt-get install libnotify-dev -y
 sudo chmod +x tg
-lua BASHAA.lua
-sudo chmod +x BASHAA
+lua BASHA.lua
+sudo chmod +x BASHA
 sudo chmod +x ./BT
 ./BT
 }
@@ -32,8 +32,8 @@ echo "Tg Is Not Found"
 exit 1
 fi
 sudo chmod +x tg
-lua BASHAA.lua
-sudo chmod +x BASHAA
+lua BASHA.lua
+sudo chmod +x BASHA
 sudo chmod +x ./BT
 ./BT
 fi
